--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("img/back.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     font-family: 'Spectral SC', serif;
 }
 
