--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ footer {
 footer p {
     text-align: center;
     font-size: 0.8em;
-    padding-top: 150px;
+    padding-top: 20%;
 }
 
 @media screen and (max-width: 768px) {
